--- a/src/WEB-INF/liferay-plugin-package.properties
+++ b/src/WEB-INF/liferay-plugin-package.properties
@@ -1,15 +1,13 @@
-name=Admin Grow Theme
+author=Liferay, Inc.
+change-log=
+licenses=DXP
+liferay-portal-profile-names=DXP
+liferay-versions=7.0.10+
+long-description=
 module-group-id=liferay
 module-incremental-version=1
-tags=
-short-description=
-long-description=
-change-log=
+name=Admin Grow
 page-url=http://www.liferay.com
-author=Liferay, Inc.
-licenses=LGPL
-liferay-versions=7.0.0+
-
-
-
-resources-importer-developer-mode-enabled=true
+servlet-context-name=admin-grow-theme
+short-description=
+tags=
